--- a/src/application/Menu.fxml
+++ b/src/application/Menu.fxml
@@ -10,13 +10,13 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="800.0" style="-fx-background-color: gray; -fx-border-color: black;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MenuCotroller">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="800.0" style="-fx-background-color: gray; -fx-border-color: black;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MenuCotroller">
    <top>
       <AnchorPane maxHeight="800.0" maxWidth="800.0" prefHeight="800.0" prefWidth="800.0" style="-fx-background-color: grey; -fx-border-color: black;" BorderPane.alignment="CENTER">
          <children>
-            <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="299.0" layoutY="17.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="204.0" fitWidth="157.0" layoutX="335.0" layoutY="14.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@data/UNO%20logo.png" />
+                  <Image url="@../data/UNO_FRONT.png" />
                </image>
             </ImageView>
             <Rectangle arcHeight="20.0" arcWidth="30.0" fill="WHITE" height="137.0" layoutX="271.0" layoutY="247.0" onMouseClicked="#onStart" opacity="0.7" stroke="BLACK" strokeType="INSIDE" width="236.0" AnchorPane.bottomAnchor="416.0" AnchorPane.leftAnchor="270.0" AnchorPane.rightAnchor="295.0" AnchorPane.topAnchor="247.0" />
