--- a/src/application/view/Board.fxml
+++ b/src/application/view/Board.fxml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="800.0" style="-fx-background-color: gray;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.BoardController">
+<AnchorPane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="800.0" style="-fx-background-color: gray;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.BoardController">
    <children>
       <ImageView fx:id="topCard" fitHeight="147.0" fitWidth="102.0" layoutX="398.0" layoutY="317.0" pickOnBounds="true">
          <image>
@@ -17,10 +19,10 @@
       </ImageView>
       <ImageView fx:id="deck" fitHeight="147.0" fitWidth="102.0" layoutX="286.0" layoutY="317.0" pickOnBounds="true">
          <image>
-            <Image url="@data/UNO_FRONT.png" />
+            <Image url="@../data/UNO_FRONT.png" />
          </image>
       </ImageView>
-      <Button fx:id="drawButton" layoutX="311.0" layoutY="477.0" mnemonicParsing="false" onMouseClicked="#drawCard" text="Draw" />
+      <Button fx:id="drawButton" layoutX="311.0" layoutY="477.0" mnemonicParsing="false" onMouseClicked="#actionDrawCard" text="Draw" />
       <Region fx:id="colorSelector" layoutX="256.0" layoutY="263.0" prefHeight="275.0" prefWidth="275.0" style="-fx-background-color: gray; -fx-opacity: .3;" visible="false" />
       <Button fx:id="redButton" layoutX="292.0" layoutY="380.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#onColorButton" prefHeight="25.0" prefWidth="62.0" text="RED" visible="false" />
       <Button fx:id="blueButton" layoutX="363.0" layoutY="327.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#onColorButton" prefHeight="25.0" prefWidth="62.0" text="BLUE" visible="false" />
@@ -32,5 +34,11 @@
       <HBox fx:id="cpu2HandDisplay" layoutX="115.0" layoutY="14.0" prefHeight="150.0" prefWidth="570.0" />
       <VBox fx:id="cpu1HandDisplay" layoutX="14.0" layoutY="196.0" prefHeight="470.0" prefWidth="150.0" />
       <HBox fx:id="cpu2HandDisplay1" layoutX="125.0" layoutY="24.0" prefHeight="150.0" prefWidth="570.0" />
+      <Button fx:id="drawButton1" layoutX="425.0" layoutY="477.0" mnemonicParsing="false" onMouseClicked="#actionSkipTurn" text="Skip" />
+      <Label fx:id="gameOverLabel" alignment="CENTER" layoutX="163.0" layoutY="164.0" prefHeight="150.0" prefWidth="494.0" text="GAME OVER!!" textAlignment="CENTER">
+         <font>
+            <Font size="64.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
